--- a/app/src/main/res/layout/activity_calculator.xml
+++ b/app/src/main/res/layout/activity_calculator.xml
@@ -31,6 +31,7 @@
                 android:layout_margin="5dp"
                 android:layout_weight="1"
                 android:backgroundTint="#AA4A44"
+                android:onClick="resetBTN"
                 android:text="@string/clear"
                 android:textColor="@color/white"
                 android:textSize="22dp"
@@ -39,14 +40,15 @@
 
             <com.google.android.material.button.MaterialButton
 
-                android:id="@+id/btnModulo"
+                android:id="@+id/btnParenthesis"
                 style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
                 android:backgroundTint="#F28C28"
-                android:text="@string/modulo"
+                android:onClick="parBTN"
+                android:text="@string/parenthesis"
                 android:textColor="@color/white"
                 android:textSize="22dp"
                 app:cornerRadius="36dp" />
@@ -59,6 +61,7 @@
                 android:layout_margin="5dp"
                 android:layout_weight="1"
                 android:backgroundTint="#F28C28"
+                android:onClick="expBTN"
                 android:text="@string/exponent"
                 android:textColor="@color/white"
                 android:textSize="22dp"
@@ -72,6 +75,7 @@
                 android:layout_margin="5dp"
                 android:layout_weight="1"
                 android:backgroundTint="#F28C28"
+                android:onClick="mulBTN"
                 android:text="@string/multiply"
                 android:textColor="@color/white"
                 android:textSize="22dp"
@@ -90,6 +94,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
+                android:onClick="sevenBTN"
                 android:text="@string/seven"
                 android:textColor="@color/white"
                 android:textSize="22dp"
@@ -104,6 +109,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
+                android:onClick="eightBTN"
                 android:text="@string/eight"
                 android:textColor="@color/white"
                 android:textSize="22dp"
@@ -116,6 +122,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
+                android:onClick="nineBTN"
                 android:text="@string/nine"
                 android:textColor="@color/white"
                 android:textSize="22dp"
@@ -129,6 +136,7 @@
                 android:layout_margin="5dp"
                 android:layout_weight="1"
                 android:backgroundTint="#F28C28"
+                android:onClick="divBTN"
                 android:text="@string/divide"
                 android:textColor="@color/white"
                 android:textSize="22dp"
@@ -147,6 +155,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
+                android:onClick="fourBTN"
                 android:text="@string/four"
                 android:textColor="@color/white"
                 android:textSize="22dp"
@@ -161,6 +170,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
+                android:onClick="fiveBTN"
                 android:text="@string/five"
                 android:textColor="@color/white"
                 android:textSize="22dp"
@@ -173,6 +183,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
+                android:onClick="sixBTN"
                 android:text="@string/six"
                 android:textColor="@color/white"
                 android:textSize="22dp"
@@ -186,6 +197,7 @@
                 android:layout_margin="5dp"
                 android:layout_weight="1"
                 android:backgroundTint="#F28C28"
+                android:onClick="subBTN"
                 android:text="@string/subtract"
                 android:textColor="@color/white"
                 android:textSize="22dp"
@@ -205,6 +217,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
+                android:onClick="oneBTN"
                 android:text="@string/one"
                 android:textColor="@color/white"
                 android:textSize="22dp"
@@ -219,6 +232,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
+                android:onClick="twoBTN"
                 android:text="@string/two"
                 android:textColor="@color/white"
                 android:textSize="22dp"
@@ -231,6 +245,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
+                android:onClick="threeBTN"
                 android:text="@string/three"
                 android:textColor="@color/white"
                 android:textSize="22dp"
@@ -244,6 +259,7 @@
                 android:layout_margin="5dp"
                 android:layout_weight="1"
                 android:backgroundTint="#F28C28"
+                android:onClick="addBTN"
                 android:text="@string/add"
                 android:textColor="@color/white"
                 android:textSize="22dp"
@@ -262,6 +278,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
+                android:onClick="doublezeroBTN"
                 android:text="@string/zeroes"
                 android:textColor="@color/white"
                 android:textSize="22dp"
@@ -276,6 +293,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
+                android:onClick="zeroBTN"
                 android:text="@string/zero"
                 android:textColor="@color/white"
                 android:textSize="22dp"
@@ -288,6 +306,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
+                android:onClick="decBTN"
                 android:text="@string/point"
                 android:textColor="@color/white"
                 android:textSize="22dp"
@@ -301,6 +320,7 @@
                 android:layout_margin="5dp"
                 android:layout_weight="1"
                 android:backgroundTint="#008000"
+                android:onClick="equalBTN"
                 android:text="@string/equals"
                 android:textColor="@color/white"
                 android:textSize="22dp"
@@ -315,7 +335,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="28dp"
-        android:text="0"
+        android:text=""
         android:textAlignment="textEnd"
         android:textColor="@color/black"
         android:textSize="38dp"
@@ -330,7 +350,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="28dp"
         android:layout_marginTop="72dp"
-        android:text="0"
+        android:text=""
         android:textAlignment="textEnd"
         android:textColor="@color/black"
         android:textSize="38dp"
