--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
     tools:context=".MainActivity">
 
     <Button
-        android:id="@+id/btnButtonExercise"
+        android:id="@+id/btnLayoutExercise"
         android:layout_width="240dp"
         android:layout_height="50dp"
         android:layout_marginTop="44dp"
@@ -19,18 +19,18 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/btnCalculator"
+        android:id="@+id/btnButtonExercise"
         android:layout_width="240dp"
         android:layout_height="50dp"
         android:layout_marginTop="30dp"
         android:text="Button Exercise"
-
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnLayoutExercise" />
 
     <Button
-        android:id="@+id/btnMidterm"
+        android:id="@+id/btnMatchGame"
         android:layout_width="240dp"
         android:layout_height="50dp"
         android:layout_marginTop="31dp"
@@ -52,7 +52,7 @@
         app:layout_constraintTop_toBottomOf="@+id/btnCalculator" />
 
     <Button
-        android:id="@+id/btnMatchGame"
+        android:id="@+id/btnCalculator"
         android:layout_width="240dp"
         android:layout_height="50dp"
         android:layout_marginTop="31dp"
@@ -60,9 +60,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.966" />
-
+        app:layout_constraintTop_toBottomOf="@+id/btnButtonExercise" />
 
     <Button
         android:id="@+id/btnPassingIntents"
