--- a/app/src/main/res/layout/activity_passing_intents_exercise.xml
+++ b/app/src/main/res/layout/activity_passing_intents_exercise.xml
@@ -30,13 +30,33 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
+            <TextView
+                android:id="@+id/textFNameTitle"
+                android:layout_width="131dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="First Name" />
+
+            <TextView
+                android:id="@+id/textLastNameTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Last Name" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
             <EditText
                 android:id="@+id/edittxtFName"
                 android:layout_width="132dp"
                 android:layout_height="43dp"
                 android:ems="10"
                 android:inputType="text"
-                android:text="First Name" />
+                android:text="" />
 
             <EditText
                 android:id="@+id/edittextLName"
@@ -44,7 +64,7 @@
                 android:layout_height="43dp"
                 android:ems="10"
                 android:inputType="text"
-                android:text="Last Name" />
+                android:text="" />
         </LinearLayout>
 
         <TextView
@@ -186,7 +206,7 @@
                 android:layout_weight="1"
                 android:ems="10"
                 android:inputType="text"
-                android:text="Nationality" />
+                android:text="" />
 
         </LinearLayout>
 
@@ -209,7 +229,7 @@
                 android:layout_weight="1"
                 android:ems="10"
                 android:inputType="text"
-                android:text="Religion: " />
+                android:text="" />
         </LinearLayout>
 
         <LinearLayout
@@ -232,7 +252,7 @@
                 android:layout_weight="1"
                 android:ems="10"
                 android:inputType="text"
-                android:text="Program" />
+                android:text="" />
 
         </LinearLayout>
 
