--- a/app/src/main/res/layout/activity_menu_exercise.xml
+++ b/app/src/main/res/layout/activity_menu_exercise.xml
@@ -11,6 +11,5 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         tools:layout_editor_absoluteX="99dp"
-        tools:layout_editor_absoluteY="368dp"
-        android:/>
+        tools:layout_editor_absoluteY="368dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
