menu functions added

--- a/app/src/main/res/layout/activity_menu_exercise.xml
+++ b/app/src/main/res/layout/activity_menu_exercise.xml
@@ -11,7 +11,10 @@
         android:id="@+id/btnTransformingButton"
         android:layout_width="250dp"
         android:layout_height="250dp"
-        android:background="@drawable/round_button"
+        android:backgroundTint="@color/green"
+        android:insetTop="0dp"
+        android:insetBottom="0dp"
+        app:cornerRadius="250dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
